# mock-oauth2-service

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml  create-release.yml
app/: __init__.py  main.py  settings.py
app/oauth2/: authorize.py  code_challenge.py  code_creator.py  configuration.py  keys.py  models.py  store.py  token_creator.py
app/responses/: http_exception_if.py
app/routes/: additional_routes.py  oauth2_routes.py
